# lattice

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  default.nix
.github/workflows/: build.yml  docs.yml  release.yml
docs/: getting-started.md  index.md  mcp.md  package.json  usage.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
src/: config.rs  error.rs  main.rs  rate_limit.rs  state.rs  static_files.rs
src/api/: attachments.rs  auth.rs  events.rs  mod.rs  projects.rs  questions.rs  review.rs  spec.rs  tasks.rs  webhooks.rs
src/db/: mod.rs  models.rs  queries.rs
src/db/migrations/: 0001_init.sql  0002_system_events.sql
src/mcp/: handler.rs  mod.rs
src/webhooks/: mod.rs
ui/: README.md  package.json
ui/src/: App.vue  main.ts  router.ts  style.css
ui/src/api/: lattice.ts
ui/src/components/: TaskDetailPanel.vue
ui/src/views/: ProjectBoardView.vue  ProjectListView.vue  QuestionsView.vue  SpecView.vue  WebhooksSettingsView.vue
